--- a/testapp/bin/AndroidManifest.xml
+++ b/testapp/bin/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+
     <uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +24,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.chartbeatsdktest.AltActivity"
+            android:label="@string/title_activity_alt"
+            android:parentActivityName="com.example.chartbeatsdktest.ChartbeatMainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.chartbeatsdktest.ChartbeatMainActivity" />
         </activity>
     </application>
 
