--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 group = 'com.chartbeat.sdk'
-version = '1.3.4'
+version = '1.3.5-beta'
 
 android {
     compileSdkVersion 26
