--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 group = 'com.chartbeat.sdk'
-version = '1.3.5-beta'
+version = '1.3.5-beta-2'
 
 android {
     compileSdkVersion 26
@@ -37,7 +37,7 @@ ext {
     siteUrl = 'https://github.com/chartbeat-labs/android_sdk'
     gitUrl = 'https://github.com/dcendents/android-maven-gradle-plugin.git'
 
-    libraryVersion = '1.3.5-beta'
+    libraryVersion = '1.3.5-beta-2'
 
     developerId = 'rmangi'
     developerName = 'Rick Mangi'
